<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
    android:padding="10dp" >

    <com.glevel.wwii.views.CustomTextView
        style="@style/AboutDialogText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_title"
        android:textSize="32sp" />

    <com.glevel.wwii.views.CustomTextView
        android:id="@+id/aboutCredits"
        style="@style/AboutDialogText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_credits" />

    <com.glevel.wwii.views.CustomTextView
        android:id="@+id/aboutBlog"
        style="@style/AboutDialogText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_blog" />

    <com.glevel.wwii.views.CustomTextView
        android:id="@+id/aboutContact"
        style="@style/AboutDialogText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_contact" />

    <com.glevel.wwii.views.CustomTextView
        style="@style/AboutDialogText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_other_sources" />

    <com.glevel.wwii.views.CustomTextView
        style="@style/AboutDialogText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:text="@string/about_version"
        android:textSize="15sp" />

</LinearLayout>