<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/allyPovBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/bg_battle"
        android:tint="#c5000000" />

    <ImageView
        android:id="@+id/germanPovBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/bg_intro"
        android:tint="#c5000000"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp" >

        <com.glevel.wwii.views.CustomTextView
            style="@style/BattleChooserTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_army" />

        <RadioGroup
            android:id="@+id/radioGroupArmy"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <com.glevel.wwii.views.CustomRadioButton
                android:id="@+id/usa_army"
                style="@style/DifficultyRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:checked="true"
                android:drawableLeft="@drawable/ic_army_usa"
                android:padding="12dp"
                android:text="@string/usa_army" />

            <com.glevel.wwii.views.CustomRadioButton
                android:id="@+id/german_army"
                style="@style/DifficultyRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_army_germany"
                android:padding="12dp"
                android:text="@string/german_army" />
        </RadioGroup>

        <com.glevel.wwii.views.CustomTextView
            style="@style/BattleChooserTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_map" />

        <android.support.v4.view.ViewPager
            android:id="@+id/lstMaps"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:overScrollMode="never" />
    </LinearLayout>

</FrameLayout>