<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/allyPovBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/bg_battle"
        android:tint="#66000000" />

    <com.glevel.wwii.views.CustomTextView
        android:id="@+id/victoryLabel"
        style="@style/SplashScreenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="100sp" />

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="3dp"
        android:background="@drawable/bg_title"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="3dp" >

        <com.glevel.wwii.views.CustomTextView
            android:id="@+id/title"
            style="@style/ArmyBuilderTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="8dp"
            android:gravity="left|center_vertical"
            android:text="@string/battle_report" />

        <com.glevel.wwii.views.CustomButton
            android:id="@+id/leaveReport"
            style="@style/ArmyBuilderSmallButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/leave_report" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:baselineAligned="false"
        android:gravity="top|center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="3dp"
        android:paddingLeft="3dp"
        android:paddingRight="3dp" >

        <LinearLayout
            style="@style/ArmyBuilderColumn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <com.glevel.wwii.views.CustomTextView
                style="@style/ArmyBuilderSubTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/your_army" />

            <ListView
                android:id="@+id/myArmyList"
                style="@style/ArmyBuilderTroopsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            style="@style/ArmyBuilderColumn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <com.glevel.wwii.views.CustomTextView
                style="@style/ArmyBuilderSubTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/enemy_army" />

            <ListView
                android:id="@+id/enemyArmyList"
                style="@style/ArmyBuilderTroopsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>