<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/allyPovBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/bg_battle"
        android:tint="#66000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="3dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_title"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="3dp" >

            <com.glevel.wwii.views.CustomTextView
                android:id="@+id/title"
                style="@style/ArmyBuilderTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="8dp"
                android:gravity="left|center_vertical"
                android:text="@string/hire_troops" />

            <com.glevel.wwii.views.CustomButton
                android:id="@+id/startBattle"
                style="@style/ArmyBuilderSmallButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/start_battle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:gravity="top|center_horizontal"
            android:orientation="horizontal"
            android:paddingTop="3dp" >

            <LinearLayout
                style="@style/ArmyBuilderColumn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <com.glevel.wwii.views.CustomTextView
                        style="@style/ArmyBuilderSubTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left|center_vertical"
                        android:text="@string/your_army" />

                    <com.glevel.wwii.views.CustomTextView
                        style="@style/ArmyBuilderSubTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/requisition_points"
                        android:textSize="14sp" />

                    <com.glevel.wwii.views.CustomTextView
                        android:id="@+id/requisitionPoints"
                        style="@style/ArmyBuilderSubTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/requisitionPoints" />
                </LinearLayout>

                <ListView
                    android:id="@+id/myArmyList"
                    style="@style/ArmyBuilderTroopsList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                style="@style/ArmyBuilderColumn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <com.glevel.wwii.views.CustomTextView
                    style="@style/ArmyBuilderSubTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/available_troops" />

                <ListView
                    android:id="@+id/availableTroopsList"
                    style="@style/ArmyBuilderTroopsList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>