<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:background="@drawable/bg_unit_item"
    android:minHeight="60dp"
    android:padding="5dp" >

    <com.glevel.wwii.views.CustomTextView
        android:id="@+id/unitName"
        style="@style/UnitText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/placeholder" />

    <ImageView
        android:id="@+id/unitImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/unitName"
        android:contentDescription="@string/unit_image"
        android:padding="3dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_launcher" />

    <ImageView
        android:id="@+id/unitExperience"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/unitName"
        android:scaleType="fitStart"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_marginRight="5dp"
        android:layout_toLeftOf="@+id/unitPrice"
        android:gravity="right|center_vertical"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/unitMainWeapon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:orientation="horizontal" >

            <com.glevel.wwii.views.CustomTextView
                android:id="@+id/unitMainWeaponName"
                style="@style/UnitText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/placeholder" />

            <com.glevel.wwii.views.CustomTextView
                android:id="@+id/unitMainWeaponAP"
                style="@style/UnitEfficiency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:text="@string/ap" />

            <com.glevel.wwii.views.CustomTextView
                android:id="@+id/unitMainWeaponAT"
                style="@style/UnitEfficiency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/at" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/unitSecondaryWeapon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <com.glevel.wwii.views.CustomTextView
                android:id="@+id/unitSecondaryWeaponName"
                style="@style/UnitText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/placeholder" />

            <com.glevel.wwii.views.CustomTextView
                android:id="@+id/unitSecondaryWeaponAP"
                style="@style/UnitEfficiency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:text="@string/ap" />

            <com.glevel.wwii.views.CustomTextView
                android:id="@+id/unitSecondaryWeaponAT"
                style="@style/UnitEfficiency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/at" />
        </LinearLayout>
    </LinearLayout>

    <com.glevel.wwii.views.CustomTextView
        android:id="@+id/unitPrice"
        style="@style/UnitText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/placeholder"
        android:textColor="@color/requisitionPoints"
        android:textSize="12sp" />

</RelativeLayout>